custom-resource-consumers/takeout/apps/media/pasta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pasta
  namespace: media
spec:
  type: NodePort
  selector:
    app: pasta
  ports:
    - name: tcp
      protocol: TCP
      port: 80
      targetPort: 80
